--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
               <div class="header__logo"> <img src="images/logo.png" alt="alt"><span>ВСЕРОССИЙСКИЙ РЕЙТИНГ АРХИТЕКТОРОВ И ДИЗАЙНЕРОВ ИНТЕРЬЕРА</span></div>
               <div class="header__logo-mydecor"> <img src="images/logo-mydecor.png" alt="alt"></div>
             </div>
-            <div class="header__btns desk"> <a class="header__btn header__btn--yellow" href="#about">о рейтинге</a><a class="header__btn header__btn--red" href="#participate">учавствовать</a><a class="header__btn header__btn--blue" href="#gallery">галерея работ</a></div><img class="header__icon-circle desk" src="images/header-icon-circle.png" alt="alt">
+            <div class="header__btns desk"> <a class="header__btn header__btn--yellow" href="#about">о рейтинге</a><a class="header__btn header__btn--red" href="#participate"><img src="images/label_part_header.svg" alt="Участвовать"></a><a class="header__btn header__btn--blue" href="#gallery">галерея работ</a></div><img class="header__icon-circle desk" src="images/header-icon-circle.png" alt="alt">
             <div class="header__burger">
               <svg width="63" height="52" viewBox="0 0 63 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0H63V12H0V0ZM0 20H63V32H0V20ZM0 40H63V52H0V40Z" fill="#F2B604"></path>
@@ -36,7 +36,7 @@
                 <div class="header__logo"> <img src="images/logo.png" alt="alt"><span>ВСЕРОССИЙСКИЙ РЕЙТИНГ АРХИТЕКТОРОВ И ДИЗАЙНЕРОВ ИНТЕРЬЕРА</span></div>
                 <div class="header__logo-mydecor"> <img src="images/logo-mydecor.png" alt="alt"></div>
               </div>
-              <div class="header__btns"> <a class="header__btn header__btn--yellow" href="#about">о рейтинге</a><a class="header__btn header__btn--red" href="#participate">учавствовать</a><a class="header__btn header__btn--blue" href="#gallery">галерея работ</a></div><img class="header__icon-circle" src="images/header-icon-circle.png" alt="alt">
+              <div class="header__btns"> <a class="header__btn header__btn--yellow" href="#about">о рейтинге</a><a class="header__btn header__btn--red" href="#participate"><img src="images/label_part_header.svg" alt="Участвовать"></a><a class="header__btn header__btn--blue" href="#gallery">галерея работ</a></div><img class="header__icon-circle" src="images/header-icon-circle.png" alt="alt">
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
           </div>
         </section>
         <section class="feedback" id="participate">
-          <div class="feedback__title"> <span>УЧАВСТВОВАТЬ<img class="feedback__square-top-left" src="images/feedback/square-top-left.png" alt="alt"></span></div>
+          <div class="feedback__title"> <span><img class="feedback__title-label" src="images/label_part_title.svg" alt="Участвовать"><img class="feedback__square-top-left" src="images/feedback/square-top-left.png" alt="alt"></span></div>
           <div class="feedback__container"> <img class="feedback__square-top-right" src="images/feedback/square-top-right.png" alt="alt"><img class="feedback__square-bottom-left" src="images/feedback/square-bottom-left.png" alt="alt">
             <form class="feedback__form" action="/" method="post">
               <div class="feedback__fields">
